--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
 <div class="section full-height z-bigger">
   <ul class="case-study-wrapper">
     <li class="case-study-name">                            	
-        <a href="aboutme.html" class="hover-target" target="_blank">Who am I</a>
+        <a href="aboutme.html" class="hover-target" target="_blank">Know me better</a>
     </li>
     <li class="case-study-name">                                         	
-        <a href="mywritings.html" class="hover-target" target="_blank">My Writings</a>
+        <a href="mywritings.html" class="hover-target" target="_blank">through my Writings,</a>
     </li>
     <li class="case-study-name">                                        	
-      <a href="#" class="hover-target">Art</a>
+      <a href="#" class="hover-target">Art,</a>
     </li>
     <li class="case-study-name">                                         	
-      <a href="phographysite.html" class="hover-target" target="_blank"> and Photography</a>
+      <a href="phographysite.html" class="hover-target" target="_blank">and Photography</a>
     </li>
   </ul>
   <ul class="case-study-images">
