--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div class="shadow-title parallax-top-shadow">work</div>
+	<div class="shadow-titl parallax-top-shadow2">Code</div>
   <div class="section-parallax parallax-00" style="background-image: url('http://www.ivang-design.com/svg-load/parallax/parallax-0.png');"></div>
   <div class="section-parallax parallax-01" style="background-image: url('http://www.ivang-design.com/svg-load/parallax/parallax-01.png');"></div>
 
@@ -37,10 +38,10 @@
         <a href="aboutme.html" class="hover-target" target="_blank">Know me better</a>
     </li>
     <li class="case-study-name">                                         	
-        <a href="mywritings.html" class="hover-target" target="_blank">through my Writings,</a>
+        <a href="mywritings.html" class="hover-target" target="_blank">through my writings,</a>
     </li>
     <li class="case-study-name">                                        	
-      <a href="#" class="hover-target">Art,</a>
+      <a href="#" class="hover-target">Art</a>
     </li>
     <li class="case-study-name">                                         	
       <a href="phographysite.html" class="hover-target" target="_blank">and Photography</a>
@@ -214,6 +215,27 @@ a:hover{
 	font-weight: 900;
 	z-index: 1;
 }
+
+.shadow-titl{
+	position: fixed;
+	top: 0;
+	margin-top: 350px;
+	left: 1040px;
+	width: 100%;
+	height: 300%;
+	text-align: left;
+	font-family: 'Muli', sans-serif;
+	-webkit-writing-mode: vertical-rl;
+	writing-mode: vertical-lr;
+	font-size: 18vw;
+	line-height: 1;
+	color: rgba(200,200,200,.1);
+	background: linear-gradient(90deg, rgba(200,200,200,0),  rgba(200,200,200,0.35));
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	font-weight: 900;
+	z-index: 1;
+}
 .section-parallax{
 	position: fixed;
   top: 0;
@@ -367,7 +389,7 @@ a:hover{
 .case-study-images li .img-hero-background{
 	position: absolute;
 	width: calc(100% - 80px);
-  max-width: 950px;
+  max-width: 750px;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -387,7 +409,7 @@ a:hover{
 	transition: all 300ms linear; 
 }
 .case-study-images li .img-hero-background img{
-  width: 100%;
+  width: 750px;
   height: auto;
   display: block;
 }
@@ -615,6 +637,9 @@ function scrollBanner() {
       'top' : (scrollPos/-2.8)+'px'
     });
     $('.parallax-top-shadow').css({
+      'top' : (scrollPos/-2)+'px'
+    });
+	$('.parallax-top-shadow2').css({
       'top' : (scrollPos/-2)+'px'
     });
   });    
