tags added to sub sites

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div> 
       <div class="hero-number-back">02</div> 
       <div class="hero-number">02</div>  
-      <div class="case-study-title">advertising, art direction</div> 
+      <div class="case-study-title">When the world can't connect to your mouth, connect it to your pen</div> 
     </li>
     <li>
       <div class="img-hero-background">
@@ -71,7 +71,7 @@
       </div>
       <div class="hero-number-back">03</div>  
       <div class="hero-number">03</div> 
-      <div class="case-study-title">photography, retouching</div> 
+      <div class="case-study-title">Let your feeling flow through graphite</div> 
     </li>
     <li>
       <div class="img-hero-background">
@@ -79,7 +79,7 @@
       </div> 
       <div class="hero-number-back">04</div> 
       <div class="hero-number">04</div> 
-      <div class="case-study-title">photography, advertising</div> 
+      <div class="case-study-title">There's a better world behind the lens</div> 
     </li>
   </ul>	
 </div>
