--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
       <div class="hero-number-back">03</div>  
       <div class="hero-number">03</div> 
-      <div class="case-study-title">Let your feeling flow through graphite</div> 
+      <div class="case-study-title">Let your feelings flow through graphite</div> 
     </li>
     <li>
       <div class="img-hero-background">
