adding my writings

--- a/mywritings.html
+++ b/mywritings.html
@@ -51,7 +51,7 @@
 									అడిగిందా నిన్ను నీ మతం? అడిగే చేరిందా నీలోని ఈ ప్రాణం?<br><br>
 									
 									పుట్టుకతో నూలు పోగుకైనా లేని వర్ణం!<br>
-									నిర్ణయిస్తోందా నేడు నీ మతం? నువ్వు నేర్చే అక్షరపు వర్ణం?<br><br></h5>
+									నిర్ణయిస్తోందా నేడు నీ మతం? నువ్వు నేర్చే అక్షరపు వర్ణం?<br></h5>
 								<p class="mb-0 mt-3">March 15, 2022</p>
 							</div>
 						</a>
@@ -59,7 +59,7 @@
 					<div class="col-12 text-center mb-3" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
 						<a href="#" class="cursor-link-blog-post-1">
 							<div class="blog-post-box">
-								<h5>కనుల ముందు ప్రాణమున్నా కాపాడుకోలేని ఓ కర్కశ హృదయమా!
+								<h5><br>కనుల ముందు ప్రాణమున్నా కాపాడుకోలేని ఓ కర్కశ హృదయమా!
 									<br>ప్రాణమే లేని దేహాన్ని కాటికి మోయున్నాడు, నీకు కన్నీరు అవసరమా?</h5>
 								<p class="mb-0 mt-3">May 11, 2022</p>
 							</div>
