"additions to my writings"

--- a/mywritings.html
+++ b/mywritings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Adrenaline</title>
+    <title>My Diary</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
@@ -20,8 +20,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-12 section-title-wrap text-center parallax-fade-top">
-						<p class="primary-color">stories</p>	
-						<h1>a place full<br>of stuff</h1>
+						<p class="primary-color">Poetry | Prose | Poems</p>	
+						<h1>My Diary</h1>
 					</div>
 				</div>	
 			</div>
@@ -323,10 +323,10 @@ a:hover {
   	z-index: 1;
 }
 .cursor-shadow.active-blog-post-1 {
-	  background-image: url('http://ivang-design.com/alke/img/blog/1.jpg');
+	  background-image: url('cold_heart.jpg');
 }
 .cursor-shadow.active-blog-post-2 {
-	  background-image: url('http://ivang-design.com/alke/img/blog/2.jpg');
+	  background-image: url('hijab_issue.JPEG');
 }
 .cursor-shadow.active-blog-post-3 {
 	  background-image: url('http://ivang-design.com/alke/img/blog/3.jpg');
