Added author and keywords

--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta author="Keerthi Sharan">
+    <meta name="keywords" content="keerthisharan, portfolio, keerthi, sharan, website, photography, writings">
     <title>Keerthi Sharan's Portfolio</title>
     <link rel="stylesheet" href="Dressing.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
