--- a/Ganesha.html
+++ b/Ganesha.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="DressGanesh.css">
     <script src="GaneshSpeaks.js"></script>
-    <title>Ganesha</title>
+    <title>Happy Ganesh Chaturthi</title>
 </head>
 <body>
     <audio id="audio" src="https://jaiganesh.netlify.com/music.mp3">your </audio>
